--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">QRScanner</string>
+    <string name="activity_label">QR Scanner</string>
+    <string name="scanning">Scanning...</string>
 </resources>
