--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">QRScanner</string>
     <string name="activity_label">QR Scanner</string>
     <string name="scanning">Scanning...</string>
+    <string name="success_copy">Result is copied!</string>
 </resources>
